[gd_scene load_steps=7 format=3 uid="uid://b2a2651c6up3c"]

[ext_resource type="Script" uid="uid://ckc7k6cgtd8io" path="res://script/Floating_damages.gd" id="1_6mg34"]
[ext_resource type="FontFile" uid="uid://duykn563gan2v" path="res://font/RobotoCondensed-Bold.ttf" id="1_g8wpn"]
[ext_resource type="Texture2D" uid="uid://cqi52bd1vqapw" path="res://img/Base Card/Icon_dmg.png" id="2_pplkj"]

[sub_resource type="Animation" id="Animation_qs22s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("txt_dmg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -1084.3)]
}

[sub_resource type="Animation" id="Animation_pnwq7"]
resource_name = "anim_fdmg"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("txt_dmg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, -24.001), Vector2(-0.5, -1084.3), Vector2(-0.5, -1084.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("txt_dmg:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(7, 7), Vector2(1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("txt_dmg:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.75), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dku42"]
_data = {
&"RESET": SubResource("Animation_qs22s"),
&"anim_fdmg": SubResource("Animation_pnwq7")
}

[node name="Main_parent" type="Node2D"]
z_index = 4096
scale = Vector2(2, 2)
script = ExtResource("1_6mg34")

[node name="txt_dmg" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -1084.3
offset_right = 0.5
offset_bottom = -802.3
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 12)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 80
theme_override_fonts/font = ExtResource("1_g8wpn")
theme_override_font_sizes/font_size = 240
text = "232322222"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 35

[node name="txt_desc" type="Label" parent="txt_dmg"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -252.0
offset_right = -204.0
offset_bottom = -63.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_g8wpn")
theme_override_font_sizes/font_size = 120
text = "Cdawd"
vertical_alignment = 1

[node name="icon_dmg" type="Sprite2D" parent="txt_dmg/txt_desc"]
z_index = 1
z_as_relative = false
position = Vector2(-68.5, 93.2006)
scale = Vector2(5.53723, 5.53723)
texture = ExtResource("2_pplkj")
hframes = 3
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dku42")
}
